feat: support of dynamic content

--- a/index.html
+++ b/index.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="images/page_icon_black.svg" rel="icon" />
-  <title>UAVs: Unmanned aerial vehicles</title>
-  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&family=Tourney:wght@100;300&display=swap" rel="stylesheet">
-  <link href="styles/index.css" rel="stylesheet">
-  <script src="scripts/app.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="images/page_icon_black.svg" rel="icon" />
+    <title>UAVs: Unmanned aerial vehicles</title>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&family=Tourney:wght@100;300&display=swap" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
+    <script src="scripts/app.js"></script>
+  </head>
+  <body>
 
-  <nav class="navbar__menu">
-    <p class="navbar__title">UAVs</p>
-    <ul id="navbar__list"></ul>
-  </nav>
+    <nav class="navbar__menu">
+      <p class="navbar__title">UAVs</p>
+      <ul id="navbar__list"></ul>
+    </nav>
 
-  <main>
-    <section id="section1" data-section="Home">
-      <div class="section__container">
-       <h1>Unmanned aerial vehicle</h1>
-       <p>commonly known as a drone, is an aircraft without any human pilot, crew or passengers on board.</p>
-      </div>
-    </section>
-    <section id="section2" data-section="Section1" class="your-active-class">
-      <div class="section__container">
-        <h2>UAV computing capability</h2>
-        <p>followed the advances of computing technology, beginning with analog controls and evolving into microcontrollers, then system-on-a-chip (SOC) and single-board computers (SBC).</p>
+    <main>
+      <section id="section1" data-section="Home">
+        <div class="section__container"></div>
+      </section>
+      <section id="section2" data-section="Section2" class="your-active-class">
+        <div class="section__container"></div>
+      </section>
+      <section id="section3" data-section="Section3">
+        <div class="section__container"></div>
+      </section>
+      <section id="section4" data-section="Section4">
+        <div class="section__container"></div>
+      </section>
+    </main>
 
-      </div>
-    </section>
-    <section id="section3" data-section="Section2">
-      <div class="section__container">
-        <h2>The level of autonomy in UAVs varies widely.</h2>
-        <p>UAV manufacturers often build in specific autonomous operations, such as: attitude stabilization on the pitch and roll axes, automatic roll and yaw control while moving horizontally.</p>
-      </div>
-    </section>
-    <section id="section4" data-section="Section3">
-      <div class="section__container">
-        <h2>Applications</h2>
-        <p>There are numerous civilian, commercial, military, and aerospace applications for UAVs. These include: Recreation, Disaster relief, archeology, search and rescue and traffic monitoring</p>
-      </div>
-    </section>
-  </main>
     <footer class="page__footer">
       <div class="footer__copyright">© 2021 Created by Seliana. All Rights Reserved</div>
       <div class="footer__icons">
@@ -51,6 +39,5 @@
         <a href="https://www.twitter.com/" class="footer__icon twitter" title="twitter" target="blank"></a>
       </div>
     </footer>
-
-</body>
+  </body>
 </html>
