feat: scroll content to start

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="images/page_icon_black.svg" rel="icon" />
-    <title>UAVs: Unmanned aerial vehicles</title>
+    <title>UAV: Unmanned aerial vehicle</title>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&family=Tourney:wght@100;300&display=swap" rel="stylesheet">
     <link href="styles/index.css" rel="stylesheet">
     <script src="scripts/app.js"></script>
@@ -12,7 +12,7 @@
   <body>
 
     <nav class="navbar__menu">
-      <p class="navbar__title">UAVs</p>
+      <p class="navbar__title">UAV</p>
       <ul id="navbar__list"></ul>
     </nav>
 
@@ -20,15 +20,19 @@
       <section id="section1" data-section="Home">
         <div class="section__container"></div>
       </section>
-      <section id="section2" data-section="Section2" class="your-active-class">
+      <section id="section2" data-section="Capability" class="your-active-class">
         <div class="section__container"></div>
       </section>
-      <section id="section3" data-section="Section3">
+      <section id="section3" data-section="Autonomy">
         <div class="section__container"></div>
       </section>
-      <section id="section4" data-section="Section4">
+      <section id="section4" data-section="Applications">
         <div class="section__container"></div>
       </section>
+
+      <div id="scroll__top" onclick="scrollToTop()">
+        <div class="scroll__icon"></div>
+      </div>
     </main>
 
     <footer class="page__footer">
