feat: mobile menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     <nav class="navbar__menu">
       <p class="navbar__title">UAV</p>
-      <ul id="navbar__list"></ul>
+      <ul id="navbar__list"></ul> 
+      <div id="mobile__menu__button" onclick="showMobileMenu()">
+        <div class="menu__dot"></div>
+        <div class="menu__dot"></div>
+        <div class="menu__dot"></div>
+      </div>
     </nav>
 
     <main>
