feat: menu button animation

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <nav class="navbar__menu">
       <p class="navbar__title">UAV</p>
       <ul id="navbar__list"></ul> 
-      <div id="mobile__menu__button" onclick="showMobileMenu()">
-        <div class="menu__dot"></div>
-        <div class="menu__dot"></div>
-        <div class="menu__dot"></div>
+      <div class="mobile__menu__button" onclick="handleMenuClick()">
+        <span></span>
       </div>
     </nav>
 
