--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar__menu">
       <p class="navbar__title">UAV</p>
       <ul id="navbar__list"></ul> 
-      <div class="mobile__menu__button" onclick="handleMenuClick()">
+      <div class="mobile__navbar__button" onclick="handleMenuClick()">
         <span></span>
       </div>
     </nav>
